# dogfood-dev

./: .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml
.agent/: dev.md
.claude/: dev.md
.claude/rules/: dev-config-drift.md  dev-packet-conventions.md  linear-list-issues-triage-crosscheck.md  linear-reviewer-packet-handoff.md  linear-status-transition-verification.md  parallel-task-merge-conflicts.md  pr-checklist-freshness.md  push-before-next-worktree.md
.github/workflows/: ci.yml
docs/: PRD.md  ROADMAP.md  SPEC.md
docs/adr/: 001-linear-tracker-switch.md
src/dogfood_dev/: __init__.py  __main__.py
tests/: test_cli.py
