[project]
name = "dogfood-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Wilson Choi", email = "wilsonkichoi@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
dogfood-dev = "dogfood_dev:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
